--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p $PORT",
     "build": "next build",
     "start": "next start",
     "clean": "rimraf .next node_modules",
@@ -16,12 +16,24 @@
     "wpe-build": "next build"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@faustjs/core": "^0.15.7",
     "@faustjs/next": "^0.15.9",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "bootstrap": "^5.2.2",
+    "graphql": "^16.6.0",
+    "jquery": "^3.6.1",
     "next": "^12.2.4",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.2",
+    "react-multi-carousel": "^2.8.2",
+    "react-owl-carousel": "^2.3.3",
     "sass": "^1.54.0",
     "sharp": "^0.30.5"
   },
