--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "graphql": "^16.6.0",
     "jquery": "^3.6.1",
     "next": "^12.2.4",
+    "next-pwa": "^5.6.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
