--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "jquery": "^3.6.1",
+    "moment": "^2.29.4",
     "next": "^12.2.4",
     "next-pwa": "^5.6.0",
     "normalize.css": "^8.0.1",
