--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "jquery": "^3.6.1",
