--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#f0b254",
     "display": "standalone",
     "scope": "/",
-    "start_url": "/",
+    "start_url": "https://hf0ak2tn748admnnhp68zwih3.js.wpenginepowered.com",
     "name": "Asim Ali",
     "short_name": "Asim",
     "icons": [
