--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "next": "^12.2.4",
     "next-pwa": "^5.6.0",
     "normalize.css": "^8.0.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
+    "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "react-owl-carousel": "^2.3.3",
