--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv-flow": "3.2.0",
     "eslint": "^8.4.1",
     "eslint-config-next": "^12.0.7",
+    "next-compose-plugins": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
   }
