--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "next dev -p $PORT",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "clean": "rimraf .next node_modules",
     "lint": "next lint",
@@ -31,6 +31,7 @@
     "moment": "^2.29.4",
     "next": "^12.2.4",
     "next-pwa": "^5.6.0",
+    "next-sitemap": "^4.0.7",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
