--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.2",
+    "globby": "^11.0.1",
     "graphql": "^16.6.0",
     "jquery": "^3.6.1",
     "moment": "^2.29.4",
