added new url for new domain

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#f0b254",
     "display": "standalone",
     "scope": "/",
-    "start_url": "https://hy3nzzcq6pe8xlv2r634wluzm.js.wpenginepowered.com",
+    "start_url": "https://www.asimali.ca",
     "name": "Asim Ali",
     "short_name": "Asim",
     "icons": [
