added start url for pwa

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "background_color": "#f0b254",
     "display": "standalone",
     "scope": "/",
-    "start_url": "https://www.asimali.ca",
+    "start_url": "https://asimali.ca/",
     "name": "Asim Ali",
     "short_name": "Asim",
     "icons": [
