--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.6.1",
     "moment": "^2.29.4",
     "next": "^12.2.4",
+    "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.0.7",
     "normalize.css": "^8.0.1",
