--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@gqty/cli": "^3.1.0",
+    "@next/bundle-analyzer": "^13.4.3",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
