--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
-    "globby": "^11.0.1",
     "graphql": "^16.6.0",
-    "jquery": "^3.6.1",
     "moment": "^2.29.4",
     "next": "^12.2.4",
     "next-offline": "^5.0.5",
@@ -40,9 +38,7 @@
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
-    "react-owl-carousel": "^2.3.3",
-    "sass": "^1.54.0",
-    "sharp": "^0.30.5"
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "@gqty/cli": "^3.1.0",
