--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@faustjs/next-headless-getting-started",
+  "name": "asim-ali",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -7,7 +7,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "dev": "next dev -p $PORT",
+    "dev": "next dev -p 3000",
     "build": "next build && next-sitemap",
     "start": "next start",
     "clean": "rimraf .next node_modules",
@@ -29,10 +29,8 @@
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
     "next": "^12.2.4",
-    "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.0.7",
-    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
@@ -46,10 +44,10 @@
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "dotenv-flow": "3.2.0",
     "eslint": "^8.4.1",
     "eslint-config-next": "^12.0.7",
-    "next-compose-plugins": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
   }
