--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev -p $PORT",
     "build": "next build && next-sitemap",
     "start": "next start",
     "clean": "rimraf .next node_modules",
