--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": ">=6.0.0"
   },
   "scripts": {
-    "dev": "next dev -p $PORT",
+    "dev": "next dev -p 3000",
     "build": "next build && next-sitemap",
     "start": "next start",
     "clean": "rimraf .next node_modules",
@@ -28,12 +28,12 @@
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
-    "next": "^12.2.4",
+    "next": "latest",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.0.7",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.54.0"
