--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-email/components": "^0.0.7",
+    "@react-email/render": "^0.0.7",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
-    "next": "latest",
+    "next": "^13.4.4",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.0.7",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
