--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.54.0"
