--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass": "^1.54.0"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.9.1",
     "@gqty/cli": "^3.1.0",
     "@next/bundle-analyzer": "^13.4.3",
     "@types/node": "^17.0.17",
