--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
     "moment": "^2.29.4",
-    "next": "^13.4.4",
+    "next": "13.4.12",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
