--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.7",
+    "asim-ali": "file:",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
