--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.7",
+    "@types/react-dom": "^18.3.1",
     "asim-ali": "file:",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
@@ -34,9 +35,9 @@
     "next": "13.4.12",
     "next-pwa": "^5.6.0",
     "nodemailer": "^6.9.4",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.54.0"
@@ -44,8 +45,8 @@
   "devDependencies": {
     "@gqty/cli": "^3.1.0",
     "@next/bundle-analyzer": "^13.4.3",
-    "@types/node": "^17.0.17",
-    "@types/react": "^17.0.34",
+    "@types/node": "^22.7.6",
+    "@types/react": "^18.3.11",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "dotenv-flow": "3.2.0",
     "eslint": "^8.4.1",
