--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "^18.3.1",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@gqty/cli": "^3.1.0",
