--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "start": "next start",
     "clean": "rimraf .next node_modules",
     "lint": "next lint",
-    "generate": "gqty generate",
     "wpe-build": "next build"
   },
   "dependencies": {
@@ -26,11 +25,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.0.14",
     "@types/react-dom": "^18.3.1",
     "asim-ali": "file:",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
     "graphql": "^16.6.0",
+    "lucide-react": "^0.483.0",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "next-pwa": "^5.6.0",
@@ -41,18 +43,23 @@
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.54.0",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@gqty/cli": "^3.1.0",
     "@next/bundle-analyzer": "^13.4.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.7.6",
     "@types/react": "^18.3.11",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "dotenv-flow": "3.2.0",
     "eslint": "^8.4.1",
     "eslint-config-next": "^12.0.7",
+    "postcss": "^8.5.3",
     "rimraf": "^3.0.2",
+    "tailwindcss": "^4.0.14",
     "typescript": "^4.5.2"
   }
 }
