--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "asim-ali": "file:",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
+    "clsx": "^2.1.1",
     "graphql": "^16.6.0",
     "lucide-react": "^0.483.0",
     "moment": "^2.29.4",
@@ -44,6 +45,7 @@
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.54.0",
     "sharp": "^0.33.5",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
