--- a/package.json
+++ b/package.json
@@ -23,6 +23,34 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-context-menu": "^2.2.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-email/components": "^0.0.12",
     "@react-email/render": "^0.0.7",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -31,20 +59,29 @@
     "asim-ali": "file:",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.4",
+    "date-fns": "4.1.0",
+    "embla-carousel-react": "8.5.1",
     "graphql": "^16.6.0",
     "lucide-react": "^0.483.0",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.9.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.6.0",
+    "react-day-picker": "^9.6.5",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
+    "react-resizable-panels": "^2.1.7",
     "sass": "^1.54.0",
     "sharp": "^0.33.5",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
