--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-day-picker": "^9.6.5",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "react-resizable-panels": "^2.1.7",
