--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@react-email/render": "^0.0.7",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/postcss": "^4.0.14",
+    "@types/leaflet": "^1.9.17",
     "@types/react-dom": "^18.3.1",
     "asim-ali": "file:",
     "axios": "^1.4.0",
@@ -66,6 +67,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.7.4",
     "graphql": "^16.6.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "moment": "^2.29.4",
     "next": "13.4.12",
