--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.7.4",
     "graphql": "^16.6.0",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "moment": "^2.29.4",
