--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
     "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.3",
     "sass": "^1.54.0",
     "sharp": "^0.33.5",
     "sonner": "^1.7.1",
