--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "lucide-react": "^0.483.0",
     "moment": "^2.29.4",
     "next": "13.4.12",
+    "next-lazy-hydrate": "^1.1.0",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.4",
