git init from new branch

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 PORT=3000
+NEXT_PUBLIC_SMTP_PASSWORD=Ah99c5aa6
+NEXT_PUBLIC_SMTP_USER=noreply@asimali.ca
+NEXT_PUBLIC_SMTP_PORT=465
+NEXT_PUBLIC_SMTP_HOST=smtp.stackmail.com
+NEXT_PUBLIC_GOOGLE_ANALYTICS=G-3XYCPEHD2P
+NEXT_PUBLIC_ITEM_PER_SITEMAP=50
+NEXT_PUBLIC_FRONTEND_URL=https://www.asimali.ca
+NEXT_PUBLIC_WORDPRESS_URL=https://asimaliprod.wpengine.com
+FAUSTWP_SECRET_KEY=97fa5a3d-f3d2-4fee-9f49-f0edc527c11a
