--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@gqty/cli": "^3.1.0",
     "@next/bundle-analyzer": "^13.4.3",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^22.7.6",
     "@types/react": "^18.3.11",
     "autoprefixer": "^10.4.21",
