--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3001
 NEXT_PUBLIC_SMTP_PASSWORD=Ah99c5aa6
-NEXT_PUBLIC_SMTP_USER=noreply@asimali.ca
+NEXT_PUBLIC_SMTP_USER=noreply-asimali@csoft.ca
 NEXT_PUBLIC_SMTP_PORT=465
 NEXT_PUBLIC_SMTP_HOST=smtp.stackmail.com
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-3XYCPEHD2P
